tests/error/modifier_errors/flag_classic_fun_dagger_nested1.err
Error: Dagger constraint violation (at $FILE:12:4)
   | 
10 | @guppy(daggerable=True)
11 | def test() -> None:
12 |     foo()
   |     ^^^^^ This function cannot be called in a daggerable context

Help: Consider adding the flag `(daggerable=True)` to the decorator of the
function `foo`

Guppy compilation failed due to 1 previous error
